About page change

--- a/node-app/templates/views/about.hbs
+++ b/node-app/templates/views/about.hbs
@@ -10,6 +10,7 @@
 <body>
     <div class="main-content">
     {{>header}}
+    <p>This site created by vivek Patel. It  usese mapbox and weather stack api!</p>
     <img class="potrait" src="/img/vivek23.jpg" alt="">
     </div>
     {{>footer}}
